[gd_scene load_steps=2 format=3 uid="uid://dq5g0fxwwnay5"]

[ext_resource type="Script" path="res://features/settings_menu/settings_left_right/settings_left_right.gd" id="1_rvxgm"]

[node name="SettingsLeftRight" type="PanelContainer"]
offset_right = 225.0
offset_bottom = 31.0
script = ExtResource("1_rvxgm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5

[node name="LeftLabel" type="Label" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Label"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftButton" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
focus_mode = 0
text = "<"

[node name="RightLabel" type="Label" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
focus_mode = 0
text = ">"
